force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Hourly_Rate__c</fullName>
    <description>The calculated hourly rate of the employee</description>
    <inlineHelpText>The calculated hourly rate of the employee</inlineHelpText>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>