force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Hours_per_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Hours_per_Period__c</fullName>
    <description>Input the regular number of hours the employee is expected to work per period</description>
    <inlineHelpText>Input the regular number of hours the employee is expected to work per period</inlineHelpText>
    <label>Hours per Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>