force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Override_Amount_per_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Amount_per_Period__c</fullName>
    <description>Indicates that the user has manually entered the Amount per Period value that should be paid per Calendar Period</description>
    <inlineHelpText>Indicates that the user has manually entered the Amount per Period value that should be paid per Calendar Period</inlineHelpText>
    <label>Override Amount per Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>