force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Override_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Hourly_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the user to override the system-calculated value in the Hourly Rate field</description>
    <inlineHelpText>Allows the user to override the system-calculated value in the Hourly Rate field</inlineHelpText>
    <label>Override Hourly Rate</label>
    <type>Checkbox</type>
</CustomField>