force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pay_Batch_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Pay Batch Event that will include this record in payrun calculations</description>
    <inlineHelpText>Lookup to the Pay Batch Event that will include this record in payrun calculations</inlineHelpText>
    <label>Pay Batch Event</label>
    <referenceTo>tc9_pr__Pay_Batch_Event__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>