force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pay_Batch_Event_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event_Processing_Status__c</fullName>
    <description>The current Processing Status value of the Pay Batch Event</description>
    <formula>TEXT(tc9_pr__Pay_Batch_Event__r.tc9_pr__Processing_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current Processing Status value of the Pay Batch Event</inlineHelpText>
    <label>Pay Batch Event Processing Status</label>
    <type>Text</type>
</CustomField>