force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pay_code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pay Code used to pay the Amount per Period if Auto Pay is enabled</description>
    <inlineHelpText>The Pay Code used to pay the Amount per Period if Auto Pay is enabled</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>