force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate__c</fullName>
    <description>The amount to be paid per period based on the frequency</description>
    <inlineHelpText>The amount to be paid per period based on the frequency</inlineHelpText>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>