force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pay_Rate_Frequency__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate_Frequency__c</fullName>
    <description>The frequency with which the Pay Rate should be applied</description>
    <inlineHelpText>The frequency with which the Pay Rate should be applied</inlineHelpText>
    <label>Pay Rate Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>4-Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>