force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Pro_Rata_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pro_Rata_Method__c</fullName>
    <description>How to apportion part period calculations</description>
    <inlineHelpText>How to apportion part period calculations</inlineHelpText>
    <label>Pro Rata Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Prorata</fullName>
            </value>
            <value>
                <fullName>Calendar Days in Period</fullName>
            </value>
            <value>
                <fullName>Work Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>