force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Reason__c</fullName>
    <description>The reason for the creation of the Assignment Rate record.</description>
    <inlineHelpText>The reason for the creation of the Assignment Rate record.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Starter</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Leave Without Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>