force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Regular_Units_per_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Regular_Units_per_Period__c</fullName>
    <description>The number of regular units that should be paid based on the frequency selected</description>
    <inlineHelpText>The number of regular units that should be paid based on the frequency selected</inlineHelpText>
    <label>Regular Units per Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>