force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Schedule_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Schedule_Period_Type__c</fullName>
    <description>Defines the Period Type belong to the Pay Schedule of the related Assignment</description>
    <formula>TEXT(tc9_pr__Assignment__r.tc9_pr__Schedule__r.tc9_pr__Period_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Period Type belong to the Pay Schedule of the related Assignment</inlineHelpText>
    <label>Pay Schedule Period Type</label>
    <type>Text</type>
</CustomField>