force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The order in which Assignment Rate records with the same effective date should be assessed during Payrun</description>
    <inlineHelpText>The order in which Assignment Rate records with the same effective date should be assessed during Payrun</inlineHelpText>
    <label>Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>