force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Template_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Template Group that the Assignment Rate will apply.</description>
    <inlineHelpText>Defines the Template Group that the Assignment Rate will apply.</inlineHelpText>
    <label>Template Group</label>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>