force-app/main/default/objects/tc9_pr__Assignment_Rate__c/recordTypes/tc9_et__Timesheet.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet</fullName>
    <active>true</active>
    <description>To be used for defining Assignment Rates that will be used in the Transaction processing of Timesheets</description>
    <label>Timesheet</label>
</RecordType>