force-app/main/default/objects/tc9_pr__Assignment_Rate__c/recordTypes/tc9_et__Timesheet_Template.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet_Template</fullName>
    <active>true</active>
    <description>To be used for creating Timesheet Assignment Rate Templates</description>
    <label>Timesheet Template</label>
</RecordType>