force-app/main/default/objects/tc9_pr__Assignment_Rate__c/recordTypes/tc9_pr__Remuneration.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Remuneration</fullName>
    <active>true</active>
    <description>To be used for defining Assignment Rates that are considered during Payroll processing where payees are salary and or remuneration based instead of timesheet based.</description>
    <label>Remuneration</label>
</RecordType>