force-app/main/default/objects/tc9_pr__Assignment_Rate__c/recordTypes/tc9_pr__Remuneration_Template.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Remuneration_Template</fullName>
    <active>true</active>
    <description>To be used for creating Remuneration Assignment Rate Templates</description>
    <label>Remuneration Template</label>
</RecordType>