force-app/main/default/objects/tc9_pr__Assignment_Rate__c/listViews/tc9_pr__Pending_Assignment_Rates.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Pending_Assignment_Rates</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Assignment__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Pay_Batch_Event__c</columns>
    <columns>tc9_pr__Schedule_Period_Type__c</columns>
    <columns>tc9_pr__Pay_code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Assignment Rates</label>
</ListView>